--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -114,7 +114,7 @@
           </div>
       </div>
 
-      <div class="col-lg-12 " style="margin-bottom: 15px">
+      <div class="col-lg-12 ">
         <table class="col-lg-12">
         <tbody>
         <tr><td colspan="3" class="search"><input type="text" (keyup)="searchProfiles($event)" class="offset-lg-6 col-lg-5"><fa-icon [icon]="faSearch"></fa-icon></td></tr>
