--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -78,7 +78,7 @@
               </svg>
             </div>
             <div *ngIf="newInvoiceProfile.logo" class="col-lg-12">
-              <img *ngIf="newInvoiceProfile.logo" [src]="newInvoiceProfile.logo" width="100%" height="100%"/>
+              <img *ngIf="newInvoiceProfile.logo" [src]="getLogo(newInvoiceProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
               <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
@@ -144,7 +144,7 @@
               </svg>
             </div>
             <div *ngIf="currentProfile.logo" class="col-lg-12">
-              <img *ngIf="currentProfile.logo" [src]="currentProfile.logo" width="100%" height="100%"/>
+              <img *ngIf="currentProfile.logo"  [src]="getLogo(currentProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
               <label *ngIf="!loadingLogo" class="btn btn-success" for="logo">Change</label>
