select year for chart

--- a/src/app/item-list/item-list.component.html
+++ b/src/app/item-list/item-list.component.html
@@ -114,6 +114,6 @@
       </div>
     </div>
     <div class="modal-footer col-lg-12">
-      <button type="button" class="btn btn-outline-dark" (click)="updateItem()" *ngIf="invoice.status != 2">Save</button>
+      <button type="button" class="btn btn-outline-dark" (click)="updateItem()" *ngIf="invoice.status != 2">Update</button>
     </div>
 </ng-template>
