--- a/src/app/invoiceprofile/invoiceprofile.component.html
+++ b/src/app/invoiceprofile/invoiceprofile.component.html
@@ -77,7 +77,7 @@
                   <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
               </svg>
             </div>
-            <div *ngIf="newInvoiceProfile.logo" class="col-lg-12">
+            <div *ngIf="newInvoiceProfile.logo && newInvoiceProfile.logo.id" class="col-lg-12">
               <img *ngIf="newInvoiceProfile.logo" [src]="getLogo(newInvoiceProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
@@ -143,7 +143,7 @@
                   <text x="27%" y="50%" fill="#999" style="font-weight: bold">Your logo</text>
               </svg>
             </div>
-            <div *ngIf="currentProfile.logo" class="col-lg-12">
+            <div *ngIf="currentProfile.logo && currentProfile.logo.id" class="col-lg-12">
               <img *ngIf="currentProfile.logo"  [src]="getLogo(currentProfile.logo)" width="100%" height="100%"/>
             </div>
             <div class="col-lg-12">
