--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -58,6 +58,34 @@
                 <option value="2">Closed</option>
               </select>
             </div>
+            <div class="col-lg-12">
+              <h4>Attachments</h4>
+              <div class="table-responsive">
+                <table class="table table-bordered table-light">
+                  <thead>
+                    <tr>
+                      <th>#</th>
+                      <th>fileName</th>
+                      <th>contentType</th>
+                      <th>action</th>
+                    </tr>
+                  </thead>
+                  <tbody>
+                  <tr *ngFor="let a of current.attachments">
+                    <td>{{a.id}}</td>
+                    <td>{{a.fileName}}</td>
+                    <td>{{a.contentType}}</td>
+                    <td>
+                      <div class="btn-group">
+                        <a class="btn btn-success" [href]="getAttachments(a)">Download</a>
+                        <button class="btn btn-danger">Delete</button>
+                      </div>
+                    </td>
+                  </tr>
+                  </tbody>
+                </table>
+              </div>
+            </div>
             &nbsp;
             <div class="col-lg-12">
               <button type="button" class="btn btn-outline-dark" (click)="update()">Update</button>
