add upload invoice

--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -65,3 +65,9 @@
 .ready-status {
     background-color: #669cff;
 }
+.file-handler > input[type="file"] {
+  display: none;
+}
+i{
+  vertical-align: middle;
+}
