--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -82,7 +82,7 @@
               <div class="btn btn-outline-success mb-2">
                 <span><fa-icon [icon]="faPlus"></fa-icon>Add Upload</span>
               </div>
-              <input type="file" (change)="addAttachment($event,current)">
+              <input type="file" (change)="addAttachment($event)">
             </label>
             <div class="table-responsive">
               <table class="table table-bordered table-light">
