fix delete invoice attach

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -55,7 +55,7 @@
       <div class="col-lg-12" *ngIf="current">
         <div class="row">
           <div class="col-lg-12">
-            <button class="btn btn-dark text-white" (click)="current=null">
+            <button class="btn btn-dark text-white" (click)="invoiceBack()">
               <fa-icon [icon]="faArrowLeft"></fa-icon>
               Back
             </button>
