invoice number in preview

--- a/src/app/invoice-preview/invoice-preview.component.html
+++ b/src/app/invoice-preview/invoice-preview.component.html
@@ -12,7 +12,7 @@
     <label>VAT N°: {{invoice.invoiced.vat}}</label><br/>
   </p>
 </div>
-  <div class="id col-lg-2">INVOICE NUMBER</div>
+  <div class="id col-lg-2">{{invoice.invoiceNumber}}</div>
 </div>
 <div class="col-lg-12 items-header">
   <div class="col-lg-12 row">
