--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -76,7 +76,7 @@
               <option value="2">Closed</option>
             </select>
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-12" *ngIf="0">
             <h4>Attachments</h4>
             <label class="file-handler">
               <div class="btn btn-outline-success mb-2">
@@ -117,6 +117,7 @@
           </div>
         </div>
         <hr>
+        <app-attachment-list [invoice]="current" *ngIf="current"></app-attachment-list>
         <app-item-list [invoice]="current" *ngIf="current"></app-item-list>
       </div>
     </div>
