--- a/src/styles.css
+++ b/src/styles.css
@@ -318,8 +318,19 @@ border-radius: 3px 3px 0px 0px;
     padding-left: 0px;
     cursor: pointer;
     background-color: #a8a8a8;
+    border: none;
+    border-radius: 0;
+}
+
+.onglet > div.open:first-child {
+    border-radius: 5px 0px 0px 0px;
+}
+
+.onglet > div.open:last-child {
+    border-radius: 0px 5px 0px 0px;
 }
 
 .onglet > div.open {
     background-color: #ff8484;
+    border-radius: 5px 5px 0px 0px;
 }
