--- a/src/app/attachment-list/attachment-list.component.html
+++ b/src/app/attachment-list/attachment-list.component.html
@@ -31,4 +31,4 @@
   </div>
   </div>
 </div>
-<input type="file" (change)="addAttachment($event)" id="file" style="visibility: hidden">
+<input type="file" (change)="addAttachment($event)" id="file" style="display:none">
