--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -54,22 +54,15 @@
       &nbsp;
       <div class="col-lg-12" *ngIf="current">
         <div class="row">
-          <div class="col-lg-12">
-            <button class="btn btn-dark text-white" (click)="invoiceBack()">
-              <fa-icon [icon]="faArrowLeft"></fa-icon>
-              Back
-            </button>
-          </div>
-          &nbsp;
-          <div class="col-lg-12">
+          <div class="col-lg-4">
             <label class="label" for="invoiceNumber">Invoice number</label>
             <input class="form-control" id="invoiceNumber" type="text" [(ngModel)]="current.invoiceNumber">
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-4">
             <label class="label" for="invoiceTitle">Title:&nbsp;</label>
             <input class="form-control" id="invoiceTitle" type="text" [(ngModel)]="current.title">
           </div>
-          <div class="col-lg-12">
+          <div class="col-lg-2">
             <label class="label" for="invoiceStatus">Status:&nbsp;</label>
             <select id="invoiceStatus" class="custom-select " [(ngModel)]="current.status">
               <option value="0">Open</option>
@@ -112,7 +105,10 @@
             </div>
           </div>
           &nbsp;
-          <div class="col-lg-12">
+          <div class="col-lg-2">
+            <button class="btn btn-dark text-white" (click)="invoiceBack()"><fa-icon [icon]="faArrowLeft"></fa-icon>
+                Back
+            </button>&nbsp;
             <button type="button" class="btn btn-outline-dark" (click)="update()">Update</button>
           </div>
         </div>
