number of attachment

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -26,7 +26,7 @@
             <div class="col-lg-2" *ngIf="i.status == 1"><span class="inv-status ready-status">ready</span></div>
             <div class="col-lg-2" *ngIf="i.status == 2"><span class="inv-status close-status">closed</span></div>
             <div class="col-lg-1">
-                <div ngbDropdown class="d-inline-block">
+                <div ngbDropdown class="d-inline-block" style="cursor: pointer;">
                   <span ngbDropdownToggle>{{i.attachments.length}}</span>
                   <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
                     <div *ngFor="let a of i.attachments">{{a.fileName}}</div>
