--- a/src/app/attachment-list/attachment-list.component.html
+++ b/src/app/attachment-list/attachment-list.component.html
@@ -24,7 +24,7 @@
           
           <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
             <div (click)="getAttachments(a)"><fa-icon [icon]="faEye"></fa-icon>Download</div>
-            <div (click)="removeAttachment(a)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
+            <div *ngIf="invoice.status != 2" (click)="removeAttachment(a)"><fa-icon [icon]="faTrashAlt"></fa-icon> Delete</div>
           </div>
         </div>       
       </div>
