--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,10 +1,17 @@
-<div class="col-lg-12">
+<div class="col-lg-12 row">
 <div *ngIf="chart" class="chart col-lg-6">
   <div class="col-lg-12">
     <label>Year <input type="text" [(ngModel)]="year" maxlength="4"></label>
     <fa-icon  class="btn btn-outline-dark sync-btn" (click)="reloadChart()" [icon]="faSync"></fa-icon>
     <canvas id="canvas">{{ chart }}</canvas>
   </div>
+</div>
+<div class="chart offset-lg-1 col-lg-5 row">
+  <div class="col-lg-6">Current Profile</div><div class="col-lg-6">My profile</div>
+  <div class="col-lg-6">Number of invoice</div><div class="col-lg-6">25</div>
+  <div class="col-lg-6">Total revenu invoiced</div><div class="col-lg-6">$10.000</div>
+  <div class="col-lg-6">Total revenu waiting for invoice</div><div class="col-lg-6">$100.000</div>
+  <div class="col-lg-6">Average rate</div><div class="col-lg-6">$1500</div>
 </div>
 </div>
   
