--- a/src/app/invoice/invoice.component.css
+++ b/src/app/invoice/invoice.component.css
@@ -1,3 +1,34 @@
+.new-table-invoice{
+    border: solid 1px #ededed;
+    margin-bottom: 2px;
+    padding: 0;
+}
+
+.new-table-invoice > .status.close{
+    background-color: #ff1e00;
+    max-width: 5px;
+    padding: 0;
+}
+.new-table-invoice > .status.open{
+    background-color: #66ff7a;
+    max-width: 5px;
+    padding: 0;
+}
+.new-table-invoice > div  {
+    
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.new-table-invoice > div > div > .title {
+
+    font-size: 16px;
+    font-weight: 600;
+}
+.number {
+    color: #8a8a8a;
+    font-size: 12px;
+}
+
 /*.invoicer-edit, .invoiced-edit {
     border : solid 1px #999;
     padding : 25px;
