new version for table

--- a/src/app/invoice/invoice.component.html
+++ b/src/app/invoice/invoice.component.html
@@ -132,7 +132,7 @@
         </div>
       </div>
       <div class="col-lg-2">
-          <div class="col-lg-12 number"><fa-icon [icon]="faPaperclip"></fa-icon>
+          <div class="number"><fa-icon [icon]="faPaperclip"></fa-icon>
           <div ngbDropdown class="d-inline-block" style="cursor: pointer;">
               <span ngbDropdownToggle>{{i.attachments.length}}</span>
               <div ngbDropdownMenu aria-labelledby="dropdown" class="dropdown-menu">
